--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 body {
   background: rgb(0, 179, 255);
-  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue",
-    Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-family: "HelveticaNeue-Light", sans-serif;
 }
 
 .wrapper {
